--- a/index.html
+++ b/index.html
@@ -12,20 +12,22 @@
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.all.min.js"></script>
 <script src="https://unpkg.com/typeit@8.7.0/dist/index.umd.js"></script>
-<link href="https://feeldreams.github.io/dibacadong/style.css" rel="stylesheet" type="text/css" />
+<link href="https://feeldreams.github.io/akukira/style.css" rel="stylesheet" type="text/css" />
 <script src="https://kit.fontawesome.com/4f3ce16e3e.js" crossorigin="anonymous"></script>
 
 <head>
-    <title>Untukmu Ismatul Tersayang</title>
+    <title>Script HTML buat Kamu</title>
+    <link rel="icon" type="image/x-icon" href="https://www.palingit.com/favicon.ico">
+    <meta name="description" content="HTML Replit Coding">
 </head>
 
 <body>
 
     <!-- Ganti Audio di sini -->
-    <audio src="https://feeldreams.github.io/audio/seandainya.mp3" id="linkmp3" class="sembunyi"></audio>
+    <audio src="https://feeldreams.github.io/tobelove.mp3" id="linkmp3" class="sembunyi"></audio>
 
     <div id="bodyblur">
-        <!-- Wallpaper --><img src="https://feeldreams.github.io/papjalan2.jpeg" id="wallpaper" />
+        <!-- Wallpaper --><img src="https://feeldreams.github.io/papjalan3.jpeg" id="wallpaper" />
     </div>
 
     <div id='Content'>
@@ -38,39 +40,39 @@
         <div id="loveIn">
             <!-- Tombol LOVE --><label class='lovein'>&#10084;</label>
         </div>
-        <p id="ket">Pencet LOVEnya!</p>
+        <p id="ket">Sentuh LOVEnya!</p>
 
         <div class="kumpulanstiker">
             <!-- Stiker untuk Konten -->
-            <img src="https://feeldreams.github.io/bwa2.gif" id="fotostiker" />
-            <img src="https://feeldreams.github.io/wortel.gif" id="fotostiker1" />
-            <img src="https://feeldreams.github.io/ngumpet.gif" id="fotostiker2" />
-            <img src="https://feeldreams.github.io/pusn.gif" id="fotostiker3" />
-        </div>
-
-        <div class="kumpulanwp" class="sembunyi">
-            <img src="https://feeldreams.github.io/papjalan.jpeg" id="wallpaper2" />
-            <img src="https://feeldreams.github.io/papjalan3.jpeg" id="wallpaper3" />
-            <img src="https://feeldreams.github.io/paplalulintas4.jpeg" id="wallpaper4" />
+            <img src="https://feeldreams.github.io/raintogether.gif" id="fotostiker" />
+            <img src="https://feeldreams.github.io/heart.png" id="fotostikerA" />
         </div>
 
         <div>
             <div id='pergeseran'>
 
                 <p><b>
-	        <span>Hi Ismatul Sayaang</span>
+	        <span id="inihalo"></span>
         </b></p>
 
                 <p><b>
-	        <span>Maaf yaa kalo aku<br>Sering Bikin kamu nangis</span>
+	        <span>aku cuma mau bilang</span>
         </b></p>
 
                 <p><b>
-	        <span>Aku Cuma Mau Bilang</span>
+	        <span>saat pertama kali aku mengenalmu</span>
         </b></p>
 
                 <p><b>
-	        <span>Pencet ini dulu ya 👉💌</span>
+	        <span>ku kira kamu hanya akan menjadi bagian pertemanan yang singkat</span>
+        </b></p>
+
+                <p><b>
+	        <span>dan ternyata sampai saat ini</span>
+        </b></p>
+
+                <p><b>
+	        <span id="iniakhir">kamu masih menjadi peran terpenting dalam hidupku</span>
         </b></p>
 
             </div>
@@ -80,28 +82,19 @@
 
         <div>
             <blockquote id='bq'>
-                <p id="kalimat">Maaf ya aku belum bisa jadi yang terbaik buat kamu,<br><br>Aku juga belum bisa sepenuhnya ngertiin gimana cara kamu ingin dicintai,<br><br>Aku terlalu banyak kurangnya untukmu,<br><br>Tapi aku akan terus berusaha yang terbaik buat kamu<br><br>Tak
-                    perlu seseorang yang sempurna, aku menemukan dirimu yang selalu membuatku berarti lebih dari siapapun.<br><br>Doa ku hari ini semoga ibumu menjadi ibuku juga<br><br>Aku merindukan mu, Rindu ini curang selalu bertambah tanpa tahu bagaimana
-                    caranya agar berkurang,<br><br>Aku titipkan rindu ini pada langit, untuk disampaikan kepadamu lewat hujan.
-                </p>
-                <p id="pesanAkhir">Stay With Me. My Beloved Girl 🤍</p>
+                <p id="halo" class="halo"></p>
+                <p id="kalimat"></p>
+
+                <p id="pesanAkhir" class="gaya4"></p>
+
             </blockquote>
         </div>
 
     </div>
 
+    <!-- Jangan Edit Bagian Ini -->
     <script>
         const body = document.querySelector("body");
-        const iniwp = [];
-        iden = 1;
-        iniwp[1] = wallpaper.src;
-        iniwp[2] = wallpaper2.src;
-        iniwp[3] = wallpaper3.src;
-        iniwp[4] = wallpaper4.src;
-        katakata = kalimat.innerHTML;
-        pesanAkhir2 = pesanAkhir.innerHTML;
-        kalimat.innerHTML = "";
-        pesanAkhir.innerHTML = "";
         const swalst = Swal.mixin({
             timer: 2500,
             allowOutsideClick: false,
@@ -134,182 +127,35 @@
             cancelButtonColor: '#FF0040',
             imageHeight: 80,
         });
-    </script>
-    <script>
-        //async function inipesan(){var { value: nama } = await swals.fire({title: 'Masukkan Nama Kamu', input: 'text',});if(nama && nama.length < 11){window.nama = nama; inihalo.innerHTML = "Hai, " + nama + "! ✨";mulainama();} else {await swals.fire('Ups!', 'Nama tidak boleh kosong atau lebih dari 10 karakter, ya!');inipesan();} }
+
         async function inipesan() {
-            nama = "kamu";
-            window.nama = nama;
+            let isma = "ismatul sayang"
+            inihalo.innerHTML = "haii, " + isma + "! ✨";
             mulainama();
+            // var {
+            //     value: nama
+            // } = await swals.fire({
+            //     title: 'Masukin Nama Kamu',
+            //     input: 'text',
+            // });
+            // if (nama && nama.length < 11) {
+            //     window.nama = nama;
+            //     inihalo.innerHTML = "haii, " + nama + "! ✨";
+            //     mulainama();
+            // } else {
+            //     await swals.fire('Ups!', 'Nama tidak boleh kosong atau lebih dari 10 karakter, ya!');
+            //     inipesan();
+            // }
         }
 
-        const box = document.getElementById('pergeseran');
-        const directChildren = box.children.length;
-        console.log('Script ini dibuat oleh: feeldream.id');
-        console.log('Total Slide: ', directChildren);
-        totalPesan = directChildren;
+        pesanAkhir1 = "sayang, aku mau bilang:";
+        pesanAkhir2 = "thank you for coming in my life, i'm very lucky to have met you. i know people come and go, i hope you will always beside me, i promise i will always love u and you will always be my favorite person..";
+        pesanAkhir3 = "i love uuu <3";
 
-        aktigeser = 0;
-        thisgeser = 1;
-        document.getElementById("bodyblur").onclick = function() {
-            if (aktigeser == 1) {
-                document.getElementById('pergeseran').scrollLeft += 300;
-                hsementara();
-                ftganti++;
-                fthilang();
-                iden += 1;
-                if (iden > 1) {
-                    if (iden % 2 == 0) {
-                        wallpaper.style = "transform: scale(1.5)";
-                    } else {
-                        wallpaper.style = "transform: scale(1)";
-                    }
-                    wallpaper.src = iniwp[iden];
-                }
-            }
-        }
-
-        document.getElementById("loveIn").onclick = function() {
-            //setTimeout(mulaiAwal,400);function mulaiAwal() {
-            if (fungsiAwal == 0) {
-                audio.play();
-                loveIn.style = "transition:all .8s ease;transform:scale(15);opacity:0";
-                ftAwal.style = "opacity:0";
-                wallpaper.style = "transform: scale(1);";
-                ket.style = "display:none";
-                fungsiAwal = 1;
-                setTimeout(initengahan, 300);
-                setTimeout(mulainama, 400)
-            }
-        }
-
-        function hsementara() {
-            ketgeser.style = "position:relative;";
-            thisgeser += 1;
-            aktigeser = 0;
-            setTimeout(munculkembali, 500)
-        }
-
-        function munculkembali() {
-            if (thisgeser < totalPesan) {
-                ketgeser.style = "position:relative;transform:scale(1);opacity:.7";
-                aktigeser = 1;
-            }
-            //if(thisgeser==totalPesan){setTimeout(aksiakhir,400)}
-        }
-
-        document.getElementById("pergeseran").onclick = function() {
-            if (thisgeser == totalPesan) {
-                pergeseran.style = "position:relative";
-                ketgeser.style = "position:relative";
-                ftganti = 10;
-                fthilang();
-                setTimeout(bqmuncul, 400);
-            }
-        }
-
-        function kalimatakhir() {
-            new TypeIt("#kalimat", {
-                strings: ["" + katakata],
-                startDelay: 50,
-                speed: 54,
-                cursor: true,
-                afterComplete: function() {
-                    kalimat.innerHTML = katakata;
-                    mulaiketikAkhir();
-                },
-            }).go();
-        }
-
-        function mulaiketikAkhir() {
-            setInterval(berjatuhan, 250);
-            pesanAkhir.style = "position:relative;opacity:1;visibility:visible;transform: scale(1)";
-            new TypeIt("#pesanAkhir", {
-                strings: ["" + pesanAkhir2],
-                startDelay: 100,
-                speed: 55,
-                cursor: true,
-                deleteSpeed: 20,
-                breakLines: false,
-                waitUntilVisible: true,
-                lifelike: true,
-                afterComplete: function() {
-                    pesanAkhir.innerHTML = "" + pesanAkhir2;
-                },
-            }).go();
-        }
-
-        function initengahan() {
-            ftAwal.style = "display:none";
-            loveIn.style = "display:none";
-            ket.style = "display:none";
-            Content.style = "opacity:1;margin-top:7vh";
-        }
-
-        async function mulainama() {
-            setTimeout(pgmuncul, 200);
-            ftmuncul();
-        }
-
-        function ftmuncul() {
-            if (ftganti == 0) {
-                fotostiker.src = deffotostiker;
-            }
-            if (ftganti == 1) {
-                fotostiker.src = fotostiker1.src;
-            }
-            if (ftganti == 2) {
-                fotostiker.src = fotostiker2.src;
-            }
-            if (ftganti == 3) {
-                fotostiker.src = fotostiker3.src;
-            }
-            if (ftganti < 10) {
-                fotostiker.style = "display:inline-flex;opacity:1;transform:scale(1)";
-            }
-        }
-
-        function fthilang() {
-            fotostiker.style = "display:inline-flex;opacity:0;transform:scale(0)";
-            if (ftganti < 10) {
-                setTimeout(ftmuncul, 250)
-            }
-        }
-
-        function jjfoto() {
-            fotostiker.style.animation = "rto .8s infinite alternate";
-        }
-
-        function pgmuncul() {
-            pergeseran.style = "position:relative;opacity:1;visibility:visible;transform:scale(1);";
-            setTimeout(munculkembali, 500)
-        }
-
-        function bqmuncul() {
-            fotostiker.style = "display:none";
-            pergeseran.style = "display:none";
-            ketgeser.style = "display:none";
-            bq.style = "position:relative;opacity:1;visibility:visible;margin-top:5vh;transform: scale(1);";
-            setTimeout(kalimatakhir, 400);
-        }
-
-        function bqhilang() {
-            wallpaper.style = "transform: scale(2);";
-            bodyblur.style = "opacity:.3";
-            bq.style = "position:relative;transition:all .7s ease;";
-        }
-
-        function otomatis() {
-            halo.style.opacity = "0";
-            kalimat.style = "opacity:0";
-            setTimeout(otolanj, 400);
-        }
-
-        function otolanj() {
-            halo.style.opacity = "1";
-            kalimat.style = "opacity:1";
-        }
+        totalPesan = 6; //Input total pesan (slide) di sini ya!
     </script>
+    <script src="https://feeldreams.github.io/akukira/script.js"></script>
+    <!-- Sampai Sini -->
 </body>
 
 </html>
