--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <script src="https://kit.fontawesome.com/4f3ce16e3e.js" crossorigin="anonymous"></script>
 
 <head>
-    <title>Script HTML buat Kamu</title>
+    <title>Untuk Ismatul Tersayang</title>
     <link rel="icon" type="image/x-icon" href="https://www.palingit.com/favicon.ico">
     <meta name="description" content="HTML Replit Coding">
 </head>
