--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
             // }
         }
 
-        pesanAkhir1 = "sayang, aku mau bilang:";
-        pesanAkhir2 = "thank you for coming in my life, i'm very lucky to have met you. i know people come and go, i hope you will always beside me, i promise i will always love u and you will always be my favorite person..";
-        pesanAkhir3 = "i love uuu <3";
+        pesanAkhir1 = "bub, i want to say";
+        pesanAkhir2 = "You did great today, you're doing well and pls don't stop in the halfway, well today, thank you for staying alive, thank you for bearing with all the struggles you had to go through. may all the hardships reward you a great amount of happiness in live.";
+        pesanAkhir3 = "once again you didi well today, i'm so proud of you <3";
 
         totalPesan = 6; //Input total pesan (slide) di sini ya!
     </script>
