--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
         pesanAkhir1 = "bub, i want to say";
         pesanAkhir2 = "You did great today, you're doing well and pls don't stop in the halfway, well today, thank you for staying alive, thank you for bearing with all the struggles you had to go through. may all the hardships reward you a great amount of happiness in live.";
-        pesanAkhir3 = "once again you didi well today, i'm so proud of you <3";
+        pesanAkhir3 = "once again you did well today, i'm so proud of you <3";
 
         totalPesan = 6; //Input total pesan (slide) di sini ya!
     </script>
