--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 
     <!-- Ganti Audio di sini -->
-    <audio src="https://feeldreams.github.io/tobelove.mp3" id="linkmp3" class="sembunyi"></audio>
+    <audio src="https://mornisy.github.io/tobelove.mp3" id="linkmp3" class="sembunyi"></audio>
 
     <div id="bodyblur">
         <!-- Wallpaper --><img src="https://feeldreams.github.io/papjalan3.jpeg" id="wallpaper" />
@@ -149,7 +149,7 @@
         }
 
         pesanAkhir1 = "bub, i want to say";
-        pesanAkhir2 = "You did great today, you're doing well and pls don't stop in the halfway, well today, thank you for staying alive, thank you for bearing with all the struggles you had to go through. may all the hardships reward you a great amount of happiness in live.";
+        pesanAkhir2 = "You did <b style='width: 200px; height: 200px; background-color: #FF5733;'>great</b> today, </br> you're doing well and pls don't stop in the halfway,</br> even if you're just breathing today then you still did it well today, </br> thank you for <b style='width: 200px; height: 200px; background-color: #FF1493;'>staying alive</b>,</br> thank you for bearing with all the struggles you had to go through, </br> may all the hardships reward you a great amount of happiness in live.";
         pesanAkhir3 = "once again you did well today, i'm so proud of you <3";
 
         totalPesan = 6; //Input total pesan (slide) di sini ya!
