--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Sono:wght@600&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Shippori+Antique:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.all.min.js"></script>
+<link href="https://feeldreams.github.io/heihbd/style.css" rel="stylesheet" type="text/css" />
 <script src="https://unpkg.com/typeit@8.7.0/dist/index.umd.js"></script>
-<link href="https://feeldreams.github.io/akukira/style.css" rel="stylesheet" type="text/css" />
 <script src="https://kit.fontawesome.com/4f3ce16e3e.js" crossorigin="anonymous"></script>
 
 <head>
-    <title>Untuk Ismatul Tersayang</title>
+    <title>HBD buat Kamu</title>
     <link rel="icon" type="image/x-icon" href="https://www.palingit.com/favicon.ico">
     <meta name="description" content="HTML Replit Coding">
 </head>
@@ -24,79 +23,83 @@
 <body>
 
     <!-- Ganti Audio di sini -->
-    <audio src="https://mornisy.github.io/tobelove.mp3" id="linkmp3" class="sembunyi"></audio>
+    <audio src="https://mornisy.github.io/haiwo.mp3" id="linkmp3" class="sembunyi"></audio>
 
     <div id="bodyblur">
-        <!-- Wallpaper --><img src="https://feeldreams.github.io/papjalan3.jpeg" id="wallpaper" />
+        <!-- Wallpaper --><img src="https://feeldreams.github.io/wp9.jpg" id="wallpaper" />
+        <div id="beneranblur"></div>
     </div>
 
     <div id='Content'>
 
-        <div id="ftAwal">
-            <!-- Stiker Pembuka -->
-            <img src="https://feeldreams.github.io/pandaputih.gif" id="ftoAwal" />
+        <div id="kadoIn">
+            <!-- Tombol Surat --><img src="https://feeldreams.github.io/kadoin.png" />
         </div>
-
-        <div id="loveIn">
-            <!-- Tombol LOVE --><label class='lovein'>&#10084;</label>
-        </div>
-        <p id="ket">Sentuh LOVEnya!</p>
+        <p id="ket">Klik Kadonya!</p>
 
         <div class="kumpulanstiker">
             <!-- Stiker untuk Konten -->
-            <img src="https://feeldreams.github.io/raintogether.gif" id="fotostiker" />
-            <img src="https://feeldreams.github.io/heart.png" id="fotostikerA" />
+            <img src="https://feeldreams.github.io/bunga.gif" id="fotostiker" />
+            <img src="https://feeldreams.github.io/pusn.gif" id="fotostiker1" />
+            <img src="https://feeldreams.github.io/pandacoklat.gif" id="fotostiker2" />
+            <img src="https://feeldreams.github.io/cilukba.gif" id="fotostiker3" />
+            <img src="https://feeldreams.github.io/pandakuning.gif" id="fotostiker4" />
+            <img src="https://feeldreams.github.io/emawh.gif" id="fotostiker5" />
+
+            <img src="https://feeldreams.github.io/pandacoklat.gif" id="fotostiker6" />
         </div>
 
-        <div>
-            <div id='pergeseran'>
-
-                <p><b>
-	        <span id="inihalo"></span>
-        </b></p>
-
-                <p><b>
-	        <span>aku cuma mau bilang</span>
-        </b></p>
-
-                <p><b>
-	        <span>saat pertama kali aku mengenalmu</span>
-        </b></p>
-
-                <p><b>
-	        <span>ku kira kamu hanya akan menjadi bagian pertemanan yang singkat</span>
-        </b></p>
-
-                <p><b>
-	        <span>dan ternyata sampai saat ini</span>
-        </b></p>
-
-                <p><b>
-	        <span id="iniakhir">kamu masih menjadi peran terpenting dalam hidupku</span>
-        </b></p>
-
-            </div>
-        </div>
-
-        <p id="ketgeser">Klik untuk Geser!</p>
+        <p id="halo" class="halo"></p>
 
         <div>
-            <blockquote id='bq'>
-                <p id="halo" class="halo"></p>
-                <p id="kalimat"></p>
+            <blockquote id='bq' data-text='㋡'>
+                <p id="kalimat">Aku Ada Sesuatu Nih 🤣❤️</p>
 
-                <p id="pesanAkhir" class="gaya4"></p>
+                <p id="pesan1">Klik 4 LOVE di Bawah! ❤️, Klik nya pelan pelan dan nikmati lagunya 😆</p>
+                <div id="kolombaru">
+                    <li id="lv1">🤍</li>
+                    <li id="lv2">🤍</li>
+                    <li id="lv3">🤍</li>
+                    <li id="lv4">🤍</li>
+                </div>
 
+                <p id="pesan2">Tunggu...</p>
+                <!-- Pesan -->
+                <p id="pesan3">Ciee.. Ada yang Ultah Nih 🤣❤️</p>
+                <p id="pesan4">Happy Birthday, </p>
+                <p id="pesan5" class="gaya2">Hai sayangkuu </p>
+                <p id="pesan6" class="gaya2">Semoga panjang umur biar kita bisa menikmati dunia ini berdua sayang 😆❤️</p>
+                <p id="pesan7" class="gaya2">Sehat selalu ya!</p>
+
+                <p id="pesan8" class="gaya2">Canda wkwwk :v</p>
+                <p id="pesan9" class="gaya2">Oh iya, semoga di hari spesialmu ini kamu dapat menjadi pribadi yang lebih baik yaa, semoga diberi kesabaran yang tinggi untuk menghadapi aku, semoga sayang di limpahkan rezeki, di beri kesempatan mendapat rezeki, tetep patuh sama mami
+                    dan ayah, berbakti terus sama mami dan ayah, sampai suatu saat nanti sayang yang akan berbakti kepadaku, semakin taat beribadah, aku selalu berdoa yang terbaik untukmu sayang, di ulang tahun mu ke 24 ini aku titip pesen,</br> You can
+                    talk to me when your heart is heavy. </br> You can come to me when your thoughts are loud. </br>You heart is safe here. </br>You are safe here.🥳❤️</p>
+                <p id="pesan10" class="gaya2">Happy Level Up Day!! 🥳, and enjoy the song, I love u sayang ❤️</p>
+
+                <!-- Tombol Lanjut -->
+                <p id="opsL">Klik untuk Lanjut</p>
             </blockquote>
+        </div>
+
+        <!-- Tombol Kirim Pesan -->
+        <div id="Tombol"><a id="By">&#128140; Lanjut</a></div>
+
+        <!-- Pesan Tambahan -->
+        <p id="katatambahan" class="sembunyi">Gajadi 😜</p>
+
+        <!-- Pesan Ditolak -->
+        <div id="pesanditolak">
+            <img id="stikerditolak" src="https://feeldreams.github.io/weee.gif" />
+            <p id="kataditolak">Yaudah kalo gamau mh 😜</p>
         </div>
 
     </div>
 
-    <!-- Jangan Edit Bagian Ini -->
     <script>
         const body = document.querySelector("body");
         const swalst = Swal.mixin({
-            timer: 2500,
+            timer: 2300,
             allowOutsideClick: false,
             showConfirmButton: false,
             timerProgressBar: true,
@@ -110,51 +113,62 @@
 
         function berjatuhan() {
             const heart = document.createElement("div");
-            heart.className = "fas fa-heart";
+            heart.className = "fas fa-snowflake";
             heart.style.left = (Math.random() * 90) + "vw";
             heart.style.animationDuration = (Math.random() * 3) + 2 + "s";
             body.appendChild(heart);
         }
         setInterval(function name(params) {
-            var heartArr = document.querySelectorAll(".fa-heart");
+            var heartArr = document.querySelectorAll(".fa-snowflake");
             if (heartArr.length > 100) {
                 heartArr[0].remove()
             }
         }, 100);
-        Content.style = "opacity:1;margin-top:14vh";
+        Content.style = "opacity:1;margin-top:16vh";
         const swals = Swal.mixin({
             allowOutsideClick: false,
             cancelButtonColor: '#FF0040',
             imageHeight: 80,
         });
 
+        document.getElementById("kadoIn").onclick = function() {
+            if (fungsiAwal == 0) {
+                audio.play();
+                fungsiAwal = 1;
+                kadoIn.style = "transition:all .8s ease;transform:scale(10);opacity:0";
+                wallpaper.style = "transform: scale(1.5);";
+                ket.style = "display:none";
+                setTimeout(initengahan, 300);
+                inipesan();
+            }
+        }
+
         async function inipesan() {
-            let isma = "ismatul sayang"
-            inihalo.innerHTML = "haii, " + isma + "! ✨";
+            var nama = "ismatul sayang";
+            window.nama = nama;
+            vketikhalo = "Hai, " + nama + " ✨";
             mulainama();
-            // var {
-            //     value: nama
-            // } = await swals.fire({
-            //     title: 'Masukin Nama Kamu',
-            //     input: 'text',
-            // });
-            // if (nama && nama.length < 11) {
-            //     window.nama = nama;
-            //     inihalo.innerHTML = "haii, " + nama + "! ✨";
-            //     mulainama();
+            // if (nama && nama.length < 20) {
+
             // } else {
             //     await swals.fire('Ups!', 'Nama tidak boleh kosong atau lebih dari 10 karakter, ya!');
             //     inipesan();
             // }
         }
 
-        pesanAkhir1 = "bub, i want to say";
-        pesanAkhir2 = "You did <b style='width: 200px; height: 200px; background-color: #FF5733;'>great</b> today, </br> you're doing well and pls don't stop in the halfway,</br> even if you're just breathing today then you still did it well today, </br> thank you for <b style='width: 200px; height: 200px; background-color: #FF1493;'>staying alive</b>,</br> thank you for bearing with all the struggles you had to go through, </br> may all the hardships reward you a great amount of happiness in live.";
-        pesanAkhir3 = "once again you did well today, i'm so proud of you <3";
+        //Variable Pertanyaan Akhir
+        var tanya = 'Mau Kado Gak Nih? 😶❤️';
+        var opstanya = 'Ayo jawab 😆';
+        var tompositif = 'Mau';
+        var tomnegatif = 'Engga';
 
-        totalPesan = 6; //Input total pesan (slide) di sini ya!
+        async function menuju() {
+            pesanwhatsapp = "You are his everything. He loves you more than anything else and will always choose you. also is his eyes you are perfect to him";
+            await swals.fire('OK!', 'Kirim jawabannya ke WhatsApp aku, ya!', 'success');
+            window.location = "https://api.whatsapp.com/send?phone=6285931504125&text=" + pesanwhatsapp;
+        }
     </script>
-    <script src="https://feeldreams.github.io/akukira/script.js"></script>
+    <script src="https://feeldreams.github.io/heihbd/script.js"></script>
     <!-- Sampai Sini -->
 </body>
 
